[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zoomtool"
version = "0.1.0"
description = "Interactive draggable and resizable zoom window for Matplotlib"
readme = "README.md"
authors = [{name="Fahimeh Hajizadeh"}]
license = {text="MIT"}
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/yourusername/zoomtool"
