[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zoomtool"
version = "0.1.0"
description = "Interactive draggable and resizable zoom window for Matplotlib"
readme = "README.md"
authors = [{name = "Fahimeh Hajizadeh"}]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "matplotlib>=3.0",
]

[project.urls]
Homepage = "https://github.com/FahimeHajizadeh/python_zoomed_axes"
Repository = "https://github.com/FahimeHajizadeh/python_zoomed_axes"
Issues = "https://github.com/FahimeHajizadeh/python_zoomed_axes/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black",
    "flake8",
]
